cabal-version:      3.0
name:               lyah-site
version:            0.1.0.0
license:            BSD-3-Clause
author:             LYAH Community
build-type:         Simple
tested-with:        GHC ==9.10.3

executable site
  main-is:          site.hs
  build-depends:    base >= 4 && < 5
                  , hakyll >= 4.16 && < 4.17
                  , pandoc
                  , pandoc-types
                  , filepath
                  , containers
                  , text
                  , directory
  ghc-options:      -threaded -Wall -Werror
  default-language: Haskell2010
